--- a/Blog.WebUI/Views/Access/Index.cshtml
+++ b/Blog.WebUI/Views/Access/Index.cshtml
@@ -44,6 +44,7 @@
             @Html.ActionLink("Edit", "Edit", new { id=item.UserID }) |
             @Html.ActionLink("Details", "Details", new { id=item.UserID }) |
             @Html.ActionLink("Delete", "Delete", new { id=item.UserID })
+            @Html.ActionLink()
         </td>
     </tr>
 }
