--- a/Blog.WebUI/Views/_Layout.cshtml
+++ b/Blog.WebUI/Views/_Layout.cshtml
@@ -17,14 +17,14 @@
     </div>
     <div class="row panel">
         <div id="categories" class="col-xs-3">
-            Brak kategorii.
+            @Html.Action("Menu","Nav")
         </div>
         <div class="col-xs-8">
             @RenderBody()
         </div>
     </div>
     <div class="panel panel-footer text-right">
-        <a class="text-right">@DateTime.Now</a>
+        <a class="text-right">Wygenerowano: @DateTime.Now</a>
     </div>
 </body>
 </html>
